--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -181,7 +181,7 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all calculations are \todo{Average number of timesteps completed} fully completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 million steps were only partially completed. 
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). We removed the 291 structures with several channels, because in an infinite dilution MD simulation, we can only probe one channel at a time. For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all simulations are fully completed at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 4,880 MSD data are exploitable (according to the condition: R$^2>0.9$) even if the total 500 million steps are not always completed, while only 3,793 structures are completely finished. Finally, we end up with 4,873 structures (the difference correspond to energy barrier values that could not be determined).
 
 To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) are sequentially analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales is chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ are removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit out of the 2--47\si{\ns} and 50--950~\si{\ns} timescales.
 
@@ -612,7 +612,7 @@ With this parameterization, this ML model predicts the $\log_{10}$ of the diffus
     \caption{ (a) Comparison of the $\log_{10}$ of the diffusion coefficient predicted by an ML model and the true values. (b) Root mean squared errors on the same test set (20\% of all data) as a function of the fraction of the training set used to train smaller models. The error decreases as the amount of data increases and seems to stabilize near $0.25$. }
 \end{figure}
 
-The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model). \todo{Add cross-validation performance as a point of comparison, not fortuitous}
+The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using fewer data (50\% instead of 80\% of the total data could probably suffice to train a similar model). Furthermore, to prove that this good accuracy does not correspond to a fortuitous random train/test split, a cross-validation evaluation was performed on the whole dataset using a 5-fold cross-validation scheme. The average error on the five validation sets equals $0.26$ with a standard deviation of $0.01$, which is very similar to the one obtained with the specific train/test split we obtained here.
 
 \begin{figure}[ht]
   \centering
@@ -620,10 +620,9 @@ The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess
   \caption{ Feature importance determined using the average of the absolute Shapley values for each feature based on every training data. An influential feature would have a very high average absolute SHAP value. The features are detailed in Table~\ref{Table:feat_diff}. }\label{fgr:feat_imp_diff}
 \end{figure}
 
-The ML model was interpreted using the SHAP algorithms discussed in the previous chapter. As expected, the most important features were found to be the PLD and the barrier activation energy, as demonstrated in the previous section. The void fraction also appeared to play a non-negligible role.
+Then, the ML model was interpreted using the SHAP algorithms discussed in the previous chapter. As expected, the most important features were found to be the PLD and the barrier activation energy, as demonstrated in the previous section. The void fraction also appeared to play a non-negligible role.
 
 To unravel the relationship between these features and the target diffusion coefficient, partial dependence plots (PDPs) were examined for these features shown in Figure~\ref{fgr:pdp_selection_diff}. 
-
 The PLD has a contribution similar to that described in section~\ref{sct:xenon_diff_screen}. A linear contribution was observed when the PLD values were below \SI{6}{\angstrom}, followed by a constant contribution for PLD values above this threshold. The activation energy showed a negative correlation with the log of the diffusion coefficient, which explained the linear contribution observed in the dependence plot.
 
 The model also revealed less obvious contributions. Figure~\ref{fgr:diff_sa_vf} indicates that no clear relationships can be inferred between surface areas or void fractions and the diffusion coefficient. These factors played a more secondary role, slightly adjusting the obtained values with contributions of the order of $0.2$. For instance, the model identifies a positive relation between the void fraction and the contribution to the diffusion coefficient, which aligns with the physical understanding that lower void fractions correspond to lower diffusion rates within the material, assuming other parameters are equal. Conversely, larger surface areas imply more interaction with the pore walls, which slows down the diffusion of particles. Regarding the LCD, the LCD-PLD difference, xenon adsorption enthalpy, framework's mass, and density, no clear contribution patterns were observed. This may be attributed the fact that the previous features account for a substantial portion of the contribution due to the correlation between all these features.
